fix: fix list width when content is too long

--- a/packages/mdppt-serve/src/styles/index.scss
+++ b/packages/mdppt-serve/src/styles/index.scss
@@ -33,6 +33,7 @@
       display: inline-block;
       text-align: left;
       list-style: disc;
+      width: 100%;
 
       li {
         margin-bottom: 0.5rem;
